@startuml Julie e Bela - E-commerce Pijamas Infantis

left to right direction

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

skinparam class {
  BackgroundColor White
  BorderColor #2C3E6B
  ArrowColor #2C3E6B
  HeaderBackgroundColor #aebde2
  HeaderFontColor White
  FontSize 11
}
skinparam stereotypeCBackgroundColor #E6F1FB
skinparam stereotypeEBackgroundColor #EAF3DE
skinparam stereotypeABackgroundColor #FCE4EC
skinparam note {
  BackgroundColor #FFFDE7
  BorderColor #F9A825
  FontSize 10
}

abstract class DefaultEntity {
  # id : Long
  # dataCadastro : LocalDateTime
  # dataAlteracao : LocalDateTime
  --
  + registrarDataCadastro() : void
  + registrarDataAlteracao() : void
}

together {
  class Usuario {
    - username : String
    - senha : String
    - perfil : Perfil
  }
  enum Perfil {
    ADM
    USER
  }
}

together {
  class Cliente {
    - nome : String
    - cpf : String
    - email : String
    - dataNascimento : LocalDate
  }
  class Telefone <<Embeddable>> {
    - codigoArea : String
    - numero : String
  }
  class Endereco <<Embeddable>> {
    - logradouro : String
    - numero : String
    - complemento : String
    - bairro : String
    - cep : String
    - municipio : String
    - estado : String
    - principal : Boolean
  }
}

together {
  class Pijama {
    - nome : String
    - descricao : String
    - preco : Double
    - modelo : String
    - ativo : Boolean
    - sexo : SexoPijama
  }
  class PijamaVariante {
    - tamanho : Tamanho
    - estoque : Integer
  }
  class Arquivo {
    - fid : String
    - nomeOriginal : String
    - mimeType : String
    - tamanhoBytes : Long
    - sha256 : String
  }
}

together {
  class Categoria {
    - nome : String
    - descricao : String
  }
  class Marca {
    - nome : String
    - descricao : String
  }
  class Estampa {
    - nome : String
  }
  class Cor {
    - nome : String
    - hexadecimal : String
  }
  class Material {
    - nome : String
    - descricao : String
  }
}

together {
  enum Tamanho {
    RN
    UM_A_TRES_MESES
    TRES_A_SEIS_MESES
    SEIS_A_NOVE_MESES
    UM_ANO
    DOIS_ANOS
    TRES_ANOS
    QUATRO_ANOS
    SEIS_ANOS
    OITO_ANOS
    DEZ_ANOS
    DOZE_ANOS
    ADULTO
  }
  enum SexoPijama {
    FEMININO
    MASCULINO
    UNISSEX
  }
}

class TokenRecuperacaoSenha {
  - codigo : String
  - expiracao : LocalDateTime
  - usado : Boolean
}

together {
  class ListaDesejos {
    - dataCriacao : LocalDate
  }
  class CupomDesconto {
    - codigo : String
    - descricao : String
    - valorDesconto : Double
    - percentual : Boolean
    - dataInicio : LocalDate
    - dataFim : LocalDate
    - ativo : Boolean
  }
}

together {
  class Pedido {
    - data : LocalDateTime
    - total : Double
    - valorDesconto : Double
    - status : StatusPedido
    - formaPagamento : FormaPagamento
  }
  class ItemPedido {
    - quantidade : Integer
    - precoUnitario : Double
    - subtotal : Double
  }
}

together {
  enum StatusPedido {
    AGUARDANDO_PAGAMENTO
    PAGO
    EM_SEPARACAO
    ENVIADO
    ENTREGUE
    CANCELADO
  }
  enum FormaPagamento {
    PIX
    BOLETO
    CARTAO_CREDITO
    CARTAO_DEBITO
  }
}

' HERANÇA
DefaultEntity <|-- Usuario
DefaultEntity <|-- Cliente
DefaultEntity <|-- Pijama
DefaultEntity <|-- PijamaVariante
DefaultEntity <|-- Categoria
DefaultEntity <|-- Marca
DefaultEntity <|-- Estampa
DefaultEntity <|-- Cor
DefaultEntity <|-- Material
DefaultEntity <|-- Arquivo
DefaultEntity <|-- CupomDesconto
DefaultEntity <|-- ListaDesejos
DefaultEntity <|-- Pedido
DefaultEntity <|-- ItemPedido
DefaultEntity <|-- TokenRecuperacaoSenha

' 1:1
Cliente "1" --> "1" Usuario : conta

' ENUM
Usuario --> Perfil : perfil

' COMPOSIÇÃO
Cliente "1" *-- "0..*" Telefone : telefones
Cliente "1" *-- "0..*" Endereco : enderecos
Pedido "1" *-- "1..*" ItemPedido : itens
Pijama "1" *-- "1..*" PijamaVariante : variantes

' AGREGAÇÃO
Pijama "1" o-- "0..*" Arquivo : imagens
ListaDesejos "1" o-- "0..*" Pijama : pijamas

' N:1
Pijama "*" --> "1" Categoria : categoria
Pijama "*" --> "1" Marca : marca
Pijama "*" --> "0..1" Estampa : estampa
ListaDesejos "*" --> "1" Cliente : dono
Pedido "*" --> "1" Cliente : cliente
Pedido "*" --> "1" Endereco : enderecoEntrega
Pedido "*" --> "0..1" CupomDesconto : cupom
ItemPedido "*" --> "1" Pijama : pijama
ItemPedido "*" --> "0..1" PijamaVariante : variante
TokenRecuperacaoSenha "*" --> "1" Usuario : usuario
PijamaVariante "*" --> "0..1" Cor : cor

' Relação invisível para manter Cor ancorada perto de PijamaVariante
Pijama -[hidden]- Cor
Cor -[hidden]- Material

' N:N
Pijama "1..*" o--o "*" Material : materiais

' ENUMS
PijamaVariante --> Tamanho : tamanho
Pijama --> SexoPijama : sexo
Pedido --> StatusPedido : status
Pedido --> FormaPagamento : formaPagamento

@enduml